# toki-ir

./: .gitignore  .makim.yaml  .pre-commit-config.yaml  .releaserc.json  404.html  CNAME  Makefile  README.md  index.html  index.md  mkdocs.yaml  objects.inv  pyproject.toml  sitemap.xml
.github/: ISSUE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  documentation-report.yml  feature-request.yml
.github/workflows/: docs.yaml  main.yaml  release.yaml
api/: index.html  index.md
api/SUMMARY/: SUMMARY.md  index.html
api/builders/: index.html  index.md
api/builders/base/: base.md  index.html
api/builders/llvmliteir/: index.html  llvmliteir.md
api/builders/symbol_table/: index.html  symbol_table.md
api/references/: index.html
changelog/: changelog.md  index.html
conda/: dev.yaml  release.yaml
contributing/: contributing.md  index.html
docs/: changelog.md  contributing.md  example.ipynb  index.md  installation.md  mkdocs.yaml
docs/api/: references.md  references.rst
docs/tutorials/: get-started.ipynb
example/: example.ipynb  index.html
installation/: index.html  installation.md
scripts/: gen_ref_nav.py
search/: search_index.json
src/arxir/: __init__.py  api.py  operations.py  rules.py
src/arxir/ast/: __init__.py  blocks.py
src/arxir/backends/: core.py  llvmir.py
src/arxir/builders/: __init__.py  base.py  llvmir.py  llvmliteir.py  symbol_table.py
src/arxir/builders/llvmir/: __init__.py  builder.py  translator.py
src/arxir/expr/: __init__.py  base.py  datatypes.py  operators.py  stmts.py  structures.py
src/irx/: __init__.py
src/irx/ast/: __init__.py  blocks.py
src/irx/builders/: base.py  llvmliteir.py  symbol_table.py
tests/: __init__.py  conftest.py  test_binary_op.py  test_builder.py  test_for_loops.py  test_module.py  test_tokiir.py
tests/data/: test_binary_op_basic.ll  test_for_range.ll  test_module_fn_add.ll  test_module_fn_main.ll
tests/examples/: __init__.py  test_fibonacci.py
tutorials/get-started/: index.html
